--- a/app/src/main/res/layout/fragment_registra.xml
+++ b/app/src/main/res/layout/fragment_registra.xml
@@ -25,7 +25,7 @@
         android:textSize="32sp"
         android:textStyle="bold" />
 
-    <TextViews
+    <TextView
         android:id="@+id/textViewSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
