--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -149,7 +149,8 @@
                     android:tint="@color/login_icon_tint"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="Iniciar sesión con Google"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp"
+                    tools:ignore="UseAppTint" />
 
                 <ImageButton
                     android:id="@+id/btnFacebook"
@@ -159,7 +160,8 @@
                     android:tint="@color/login_icon_tint"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="Iniciar sesión con Facebook"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp"
+                    tools:ignore="UseAppTint" />
 
                 <ImageButton
                     android:id="@+id/btnGitHub"
@@ -168,7 +170,8 @@
                     android:src="@drawable/ic_github"
                     android:tint="@color/login_icon_tint"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Iniciar sesión con GitHub"/>
+                    android:contentDescription="Iniciar sesión con GitHub"
+                    tools:ignore="UseAppTint" />
             </LinearLayout>
 
         </LinearLayout>
@@ -189,7 +192,7 @@
         android:layout_height="match_parent"
         android:padding="12dp"
         android:src="@drawable/ic_persona"
-        android:tint="@color/purple_500"
+
         android:contentDescription="Icono de usuario" />
     </com.google.android.material.card.MaterialCardView>
 
