--- a/app/src/main/res/layout/fragment_registra.xml
+++ b/app/src/main/res/layout/fragment_registra.xml
@@ -90,4 +90,16 @@
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp" />
 
+    <Button
+        android:id="@+id/btnRegistrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/colorNaranja"
+        android:text="Iniciar"
+        android:textSize="18sp" />
+
 </RelativeLayout>
